--- a/index.html
+++ b/index.html
@@ -2,10 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>quest_for_happiness</title>
+    <title>Quest for Happiness Ministry | CBC School & Children's Home</title>
+    <meta name="description" content="Quest for Happiness Ministry - A CBC Primary and Junior School integrated with a Children's Home. Nurturing Minds, Building Character, and Spreading Love." />
+    <meta name="author" content="Quest for Happiness Ministry" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+
+    <meta property="og:title" content="Quest for Happiness Ministry | CBC School & Children's Home" />
+    <meta property="og:description" content="Nurturing Minds, Building Character, and Spreading Love. A CBC-compliant school providing education and care for all children." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@Lovable" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
